# django_films

./: .gitignore  README.md  pyproject.toml
film/api/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
film/api/management/commands/: bot.py  configure.py  main.py
film/api/management/commands/handlers/: client.py  keyboard.py
film/api/migrations/: 0001_initial.py  0002_alter_movie_poster.py  0003_actor_description_en_actor_description_ru_and_more.py
film/api/static/css/: style.css
film/api/templates/: base.html
film/api/templates/api/: actor.html  movie_detail.html  movie_list.html
film/api/templates/include/: footer.html  header.html  pagination.html  sidebar.html  sudebar.html
film/api/templates/movies/: base.html  movie_detail.html  movie_list.html  movies.html
film/api/templatetags/: movie_tag.py
film/contact/migrations/: 0001_initial.py
film/film/: settings.py  urls.py
film/static/css/: style.css
film/static/js/: scripts.js
film/templates/api/: movie_list.html
film/templates/contact/tags/: form.html
film/templates/include/: footer.html  header.html  sidebar.html
фильм/API/шаблоны/Фильмы/: movie_list.html
