[tool.poetry]
name = "django-films"
version = "0.1.0"
description = ""
authors = ["An4oys1012 <ankos1990@gmail.com>"]
readme = "README.md"
packages = [{include = "django_films"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
