[tool.poetry]
name = "django-films"
version = "0.1.0"
description = ""
authors = ["An4oys1012 <ankos1990@gmail.com>"]
readme = "README.md"
packages = [{include = "django_films"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
django = "^4.1.7"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
django-ckeditor = "^6.5.1"
django-recaptcha3 = "^0.4.0"
django-allauth = "^0.54.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
